[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Pure Ginger Demo.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 143
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PointsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -211.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = " 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -187.0
margin_right = 482.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Final Season
3Er Parcial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -134.0
margin_right = 111.0
margin_bottom = -51.0
custom_colors/font_color_disabled = Color( 0.87451, 0.498039, 0.0588235, 1 )
custom_fonts/font = SubResource( 3 )
text = "Let's pLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Score" type="Label" parent="."]
margin_left = 1056.0
margin_top = 13.0
margin_right = 1178.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "SCORE:"
percent_visible = -0.2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
